--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,15 @@
   <p>9977104855</p>
   <p>kshitijkale30@gmail.com</p>
   <hr>
+  <form action="mailto:kshitijkale30@gmail.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
+    <input type="text" name="yourName" value=""><br>
+    <label>Your Email:</label>
+    <input type="email" name="yourEmail" value=""><br>
+    <label>Your Message:</label><br>
+    <textarea name="yourMessage" rows="5" cols="30"></textarea><br>
+    <input type="submit" name="">
+  </form>
 
 </body>
 
